--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Job-Listing</title>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <img src="./images/bg-header-desktop.svg" alt="">
+    <div class="imageContainer">
+        <img id="background-img" src="./images/bg-header-desktop.svg" alt="">
+        <div id="searchBox">
+
+        </div>
+    </div>
     <div id="main-container">
         
     </div>
